--- a/about.html
+++ b/about.html
@@ -72,14 +72,14 @@
 
               <div class="menu">
                 <ul>
-                  <li><a href="index.html">Home</a></li>
-                  <li><a href="about.html#about-the-company">About us</a></li>
-                  <li><a href="tour.html#our-tours">Tours</a></li>
-                  <li><a href="index.html#our-packages">Packages</a></li>
-                  <li><a href="index.html#our-itenary">Itinerary</a></li>
-                  <li><a href="index.html#our-gallery">Gallery</a></li>
-                  <li><a href="index.html#our-testimonials">Reviews</a></li>
-                  <li><a href="contact.html#contact-us">Contact</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html#about-the-company">About us</a></li>
+                    <li><a href="index.html#our-itenary">Itinerary</a></li>
+                    <li><a href="index.html#our-gallery">Gallery</a></li>
+                    <li><a href="contact.html#contact-us">Contact</a></li>
+                    <li><a href="uae.html">UAE</a></li>
+                    <li><a href="tbilisi.html">Tbilisi</a></li>
+                    <li><a href="turkey.html">Turkey</a></li>
                 </ul>
               </div>
             
