--- a/tbilisi.html
+++ b/tbilisi.html
@@ -74,8 +74,8 @@
                 <ul>
                   <li><a style="color: white;" href="index.html">Home</a></li>
                   <li><a style="color:white;" href="about.html#about-the-company">About us</a></li>
-                  <li><a style="color: white;" href="tour.html#our-tours">Tours</a></li>
-                  <li><a style="color: white;" href="index.html#our-packages">Packages</a></li>
+                  <!-- <li><a style="color: white;" href="tour.html#our-tours">Tours</a></li>
+                  <li><a style="color: white;" href="index.html#our-packages">Packages</a></li> -->
                   <li><a style="color: white;" href="index.html#our-itenary">Itinerary</a></li>
                   <li><a style="color: white;" href="index.html#our-gallery">Gallery</a></li>
                   <li><a style="color: white;" href="index.html#our-testimonials">Reviews</a></li>
