--- a/about.html
+++ b/about.html
@@ -3,11 +3,12 @@
 
     <head>
         <meta charset="utf-8">
-        <title>Miracle Tourism</title>
+        <title>Wonder Miracle Tourism</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
-        <meta content="" name="keywords">
-        <meta content="" name="description">
+        <meta name="description" content="Discover the magic of Dubai with Miracle Tourism. Experience luxury, adventure, and unforgettable memories. Book your tailored Dubai vacation today.">
+        <meta name="keywords" content="Dubai tourism, Dubai travel packages, Dubai vacation, Dubai holidays, luxury Dubai, adventure Dubai, Dubai sightseeing, Dubai experiences, Dubai attractions, Dubai hotels, Dubai flights, Dubai desert safari, Dubai cultural tours, Dubai luxury shopping, Dubai marina cruise, Dubai theme parks, Dubai family holidays, Dubai honeymoon packages, bespoke Dubai tours, exclusive Dubai getaways, Dubai travel agency, Dubai city tours, Wonder Miracle Tourism">
 
+        <link href="./img/logo.ico" rel="icon">
         <!-- Google Web Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
