--- a/tour.html
+++ b/tour.html
@@ -2016,7 +2016,7 @@
                                     <small class="fa fa-star text-primary"></small>
                                     <small class="fa fa-star text-primary"></small>
                                 </div>
-                                <p class="mb-4" style="color: #352a40; font-weight: bold;">AED 900/ Per Person</p>
+                                <p class="mb-4" style="color: #352a40; font-weight: bold;">AED 900/ Per Hour</p>
                             </div>
                             <div class="row bg-primary rounded-bottom mx-0">
                                 <div class="col-6 text-start px-0">
@@ -2080,7 +2080,7 @@
                                     <small class="fa fa-star text-primary"></small>
                                     <small class="fa fa-star text-primary"></small>
                                 </div>
-                                <p class="mb-4" style="color: #352a40; font-weight: bold;">AED 2000/ Per Person</p>
+                                <p class="mb-4" style="color: #352a40; font-weight: bold;">AED 2000/ Per Hour</p>
                             </div>
                             <div class="row bg-primary rounded-bottom mx-0">
                                 <div class="col-6 text-start px-0">
@@ -2114,7 +2114,7 @@
                                     <small class="fa fa-star text-primary"></small>
                                     <small class="fa fa-star text-primary"></small>
                                 </div>
-                                <p class="mb-4" style="color: #352a40; font-weight: bold;">AED 1200/ Per Person</p>
+                                <p class="mb-4" style="color: #352a40; font-weight: bold;">AED 1200/ Per Hour</p>
                             </div>
                             <div class="row bg-primary rounded-bottom mx-0">
                                 <div class="col-6 text-start px-0">
@@ -3667,7 +3667,7 @@
                                     <small class="fa fa-star text-primary"></small>
                                     <small class="fa fa-star text-primary"></small>
                                 </div>
-                                <p class="mb-4" style="color: #352a40; font-weight: bold;">AED 400/ Per Person</p>
+                                <p class="mb-4" style="color: #352a40; font-weight: bold;">AED 400 - 5hrs</p>
                             </div>
                             <div class="row bg-primary rounded-bottom mx-0">
                                 <div class="col-6 text-start px-0">
@@ -3725,7 +3725,7 @@
                                     <small class="fa fa-star text-primary"></small>
                                     <small class="fa fa-star text-primary"></small>
                                 </div>
-                                <p class="mb-4" style="color: #352a40; font-weight: bold;">AED 500/ Per Person</p>
+                                <p class="mb-4" style="color: #352a40; font-weight: bold;">AED 500 - 5hrs</p>
                             </div>
                             <div class="row bg-primary rounded-bottom mx-0">
                                 <div class="col-6 text-start px-0">
@@ -3759,7 +3759,7 @@
                                     <small class="fa fa-star text-primary"></small>
                                     <small class="fa fa-star text-primary"></small>
                                 </div>
-                                <p class="mb-4" style="color: #352a40; font-weight: bold;">AED 1100/ Per Person</p>
+                                <p class="mb-4" style="color: #352a40; font-weight: bold;">AED 1100 - 5hrs</p>
                             </div>
                             <div class="row bg-primary rounded-bottom mx-0">
                                 <div class="col-6 text-start px-0">
@@ -3793,7 +3793,7 @@
                                     <small class="fa fa-star text-primary"></small>
                                     <small class="fa fa-star text-primary"></small>
                                 </div>
-                                <p class="mb-4" style="color: #352a40; font-weight: bold;">AED 1250/ Per Person</p>
+                                <p class="mb-4" style="color: #352a40; font-weight: bold;">AED 1250 - 5hrs</p>
                             </div>
                             <div class="row bg-primary rounded-bottom mx-0">
                                 <div class="col-6 text-start px-0">
@@ -3827,7 +3827,7 @@
                                     <small class="fa fa-star text-primary"></small>
                                     <small class="fa fa-star text-primary"></small>
                                 </div>
-                                <p class="mb-4" style="color: #352a40; font-weight: bold;">AED 135/ Per Person</p>
+                                <p class="mb-4" style="color: #352a40; font-weight: bold;">AED 500 - 5hrs</p>
                             </div>
                             <div class="row bg-primary rounded-bottom mx-0">
                                 <div class="col-6 text-start px-0">
