--- a/uae.html
+++ b/uae.html
@@ -2556,7 +2556,7 @@
                                     <small class="fa fa-star text-primary"></small>
                                     <small class="fa fa-star text-primary"></small>
                                 </div>
-                                <p class="mb-4" style="color: #352a40; font-weight: bold;">AED 900/ Per Person</p>
+                                <p class="mb-4" style="color: #352a40; font-weight: bold;">AED 900/ Per Hour</p>
                             </div>
                             <div class="row bg-primary rounded-bottom mx-0">
                                 <div class="col-6 text-start px-0">
@@ -2620,7 +2620,7 @@
                                     <small class="fa fa-star text-primary"></small>
                                     <small class="fa fa-star text-primary"></small>
                                 </div>
-                                <p class="mb-4" style="color: #352a40; font-weight: bold;">AED 2000/ Per Person</p>
+                                <p class="mb-4" style="color: #352a40; font-weight: bold;">AED 2000/ Per Hour</p>
                             </div>
                             <div class="row bg-primary rounded-bottom mx-0">
                                 <div class="col-6 text-start px-0">
@@ -2654,7 +2654,7 @@
                                     <small class="fa fa-star text-primary"></small>
                                     <small class="fa fa-star text-primary"></small>
                                 </div>
-                                <p class="mb-4" style="color: #352a40; font-weight: bold;">AED 1200/ Per Person</p>
+                                <p class="mb-4" style="color: #352a40; font-weight: bold;">AED 1200/ Per Hour</p>
                             </div>
                             <div class="row bg-primary rounded-bottom mx-0">
                                 <div class="col-6 text-start px-0">
@@ -4207,7 +4207,7 @@
                                     <small class="fa fa-star text-primary"></small>
                                     <small class="fa fa-star text-primary"></small>
                                 </div>
-                                <p class="mb-4" style="color: #352a40; font-weight: bold;">AED 400/ Per Person</p>
+                                <p class="mb-4" style="color: #352a40; font-weight: bold;">AED 400 - 5hrs</p>
                             </div>
                             <div class="row bg-primary rounded-bottom mx-0">
                                 <div class="col-6 text-start px-0">
@@ -4265,7 +4265,7 @@
                                     <small class="fa fa-star text-primary"></small>
                                     <small class="fa fa-star text-primary"></small>
                                 </div>
-                                <p class="mb-4" style="color: #352a40; font-weight: bold;">AED 500/ Per Person</p>
+                                <p class="mb-4" style="color: #352a40; font-weight: bold;">AED 500 - 5hrs</p>
                             </div>
                             <div class="row bg-primary rounded-bottom mx-0">
                                 <div class="col-6 text-start px-0">
@@ -4299,7 +4299,7 @@
                                     <small class="fa fa-star text-primary"></small>
                                     <small class="fa fa-star text-primary"></small>
                                 </div>
-                                <p class="mb-4" style="color: #352a40; font-weight: bold;">AED 1100/ Per Person</p>
+                                <p class="mb-4" style="color: #352a40; font-weight: bold;">AED 1100 - 5hrs</p>
                             </div>
                             <div class="row bg-primary rounded-bottom mx-0">
                                 <div class="col-6 text-start px-0">
@@ -4333,7 +4333,7 @@
                                     <small class="fa fa-star text-primary"></small>
                                     <small class="fa fa-star text-primary"></small>
                                 </div>
-                                <p class="mb-4" style="color: #352a40; font-weight: bold;">AED 1250/ Per Person</p>
+                                <p class="mb-4" style="color: #352a40; font-weight: bold;">AED 1250 - 5hrs</p>
                             </div>
                             <div class="row bg-primary rounded-bottom mx-0">
                                 <div class="col-6 text-start px-0">
@@ -4367,7 +4367,7 @@
                                     <small class="fa fa-star text-primary"></small>
                                     <small class="fa fa-star text-primary"></small>
                                 </div>
-                                <p class="mb-4" style="color: #352a40; font-weight: bold;">AED 135/ Per Person</p>
+                                <p class="mb-4" style="color: #352a40; font-weight: bold;">AED 500 - 5hrs</p>
                             </div>
                             <div class="row bg-primary rounded-bottom mx-0">
                                 <div class="col-6 text-start px-0">
